--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -35,9 +35,13 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/create$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin$, role: ROLE_ADMIN }
+        - { path: ^/teacher$, role: ROLE_TEACHER }
         - { path: ^/, role: ROLE_USER }
 
 
     role_hierarchy:
         ROLE_TEACHER: ROLE_USER
         ROLE_ADMIN: ROLE_TEACHER
+
+    access_denied_url: /
