--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "node-sass": "^4.11.0",
     "popper.js": "^1.14.6",
     "sass-loader": "7.0.1"
+  },
+  "scripts": {
+    "build": "yarn encore production"
   }
 }
