--- a/composer.json
+++ b/composer.json
@@ -33,10 +33,11 @@
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.0"
+        "roave/security-advisories": "dev-master"
     },
     "scripts": {
         "symfony-scripts": [
