--- a/composer.json
+++ b/composer.json
@@ -29,15 +29,15 @@
         "sensio/framework-extra-bundle": "^5.0.0",
         "sensio/generator-bundle": "^3.0",
         "symfony/monolog-bundle": "^3.1.0",
+        "symfony/phpunit-bridge": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
+        "symfony/var-dumper": "3.4.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "twig/twig": "^1.0||^2.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "roave/security-advisories": "dev-master"
     },
     "scripts": {
         "symfony-scripts": [
