session storage in db

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,9 @@ services:
     # SchoolDiaryBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+    Symfony\Component\HttpFoundation\Session\Storage\Handler\PdoSessionHandler:
+        public: flase
+        arguments:
+            - 'mysql:host=%database_host%;port=%database_port%;dbname=%database_name%'
+            - { db_username: '%database_user%', db_password: '%database_password%' }
