--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,6 +21,8 @@ security:
 
                 login_path: security_login
 
+                default_target_path: homepage
+
                 always_use_default_target_path: true
 
                 csrf_token_generator: security.csrf.token_manager
@@ -35,9 +37,9 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/create$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/admin$, role: ROLE_ADMIN }
-#        - { path: ^/teacher$, role: ROLE_TEACHER }
-#        - { path: ^/, role: ROLE_USER }
+        - { path: ^/admin$, role: ROLE_ADMIN }
+        - { path: ^/teacher$, role: ROLE_TEACHER }
+        - { path: ^/, role: ROLE_USER }
 
 
     role_hierarchy:
