--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,7 @@
         "symfony/symfony": "3.4.*",
         "symfony/var-dumper": "3.4.*",
         "symfony/webpack-encore-bundle": "^1.0",
-        "twig/twig": "^1.0||^2.0",
-        "ext-pdo": "*"
+        "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
     },
