--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     },
     "require": {
         "php": "^7.1.9",
+        "ext-json": "*",
         "ext-pdo": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
@@ -34,6 +35,7 @@
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/phpunit-bridge": "^3.0",
         "symfony/polyfill-apcu": "^1.0",
+        "symfony/serializer": "^4.2",
         "symfony/swiftmailer-bundle": "^2.6.4",
         "symfony/symfony": "3.4.*",
         "symfony/var-dumper": "3.4.*",
